26 fix height jump on inline editing

--- a/frontend/app/stylesheets/base/inputs.scss
+++ b/frontend/app/stylesheets/base/inputs.scss
@@ -184,6 +184,7 @@ $inline-editable-field-height: 30px;
     line-height: $inline-editable-field-height;
     border-color: $lily-grey;
     border-radius: $base-border-radius;
+    max-height: 30px;
 
     &:focus {
         border-color: $lily-grey;
